# django-practice

./: db.sqlite3  pyproject.toml
api/: main.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
config/: settings.py  urls.py
src/config/: asgi.py  settings.py  urls.py  wsgi.py
src/tictactoe/: views.py
